--- a/css/custom.css
+++ b/css/custom.css
@@ -6,3 +6,108 @@
     overflow: hidden;
     border-radius: 50%;
 }
+
+
+/*css for style like pinteres*/
+
+.wrapper {
+    width: 95%;
+    margin: 1.5em auto;
+}
+img, iframe {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
+.masonry {
+    margin: 1.5em 0;
+    padding: 0;
+    -moz-column-gap: 1.5em;
+    -webkit-column-gap: 1.5em;
+    column-gap: 1.5em;
+    font-size: .85em;
+}
+
+.item {
+    display: inline-block;
+    background: #fff;
+    padding: 1.5em;
+    margin: 0 0 1.5em;
+    width: 100%;
+    box-sizing: border-box !important;
+    -moz-box-sizing: border-box !important;
+    -webkit-box-sizing: border-box !important;
+    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.18);
+    border-radius: 3px !important;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+}
+
+.title, .footer {
+    text-align: center;
+}
+
+.title {
+    font-size: 1.75em;
+    margin: .25em 0;
+}
+
+.title a {
+    display: inline-block;
+    padding: .75em 1.25em;
+    color: #888;
+    border: 2px solid #aaa;
+    margin: .25em 1em 1em;
+    text-decoration: none;
+    border-radius: 3px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+}
+
+.title {
+    color: #666;
+}
+
+.title a:hover {
+    color: #666;
+    border-color: #888;
+}
+
+
+.share-link,
+.article-link {
+    color: #888;
+}
+
+@media only screen and (min-width: 700px) {
+    .masonry {
+        -moz-column-count: 2;
+        -webkit-column-count: 2;
+        column-count: 2;
+    }
+}
+
+@media only screen and (min-width: 900px) {
+    .masonry {
+        -moz-column-count: 3;
+        -webkit-column-count: 3;
+        column-count: 3;
+    }
+}
+
+@media only screen and (min-width: 1100px) {
+    .masonry {
+        -moz-column-count: 4;
+        -webkit-column-count: 4;
+        column-count: 4;
+    }
+}
+
+@media only screen and (min-width: 1280px) {
+    .wrapper {
+        width: 1260px;
+    }
+}
